<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AuthActivity">
   
    <ImageView
        android:layout_width="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_height="120dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tittleLogin"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/title_login"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tittleLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:id="@+id/tittleData"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/title_login_account_data"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/userName"
        android:padding="10dp"
        android:hint="@string/title_user_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20dp"
        android:singleLine="true"
        android:background="@drawable/back_all_corners_solid_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tittleData"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/password"
        android:padding="10dp"
        android:hint="@string/title_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:layout_marginEnd="20dp"
        android:background="@drawable/back_all_corners_solid_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:background="@drawable/back_login_button"
        android:textColor="@color/white"
        android:padding="5dp"
        android:text="@string/title_login"
        android:textAllCaps="false"
        android:id="@+id/btn_login"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/forgetPass"
        android:text="@string/title_forget_pass"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginStart="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/txt_have_not_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_have_not_account"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgetPass"
        android:layout_marginStart="25dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_have_not_account"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:background="#62AEAA"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/title_register"
        android:textAllCaps="false"
        android:id="@+id/btn_register"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:id="@+id/loader_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>